package edu.fiuba.algo3.model.Section;



public class MeleeField extends Section {



}
