package edu.fiuba.algo3.model.Section;



public class RangeField extends Section{




}
