package edu.fiuba.algo3.model.Section;


public class SiegeField extends Section {


}
